packages/scaml.1.2.0~pre7/tests/fail/lang_exn.ml
(* 
MUST_FAIL 
*)
open SCaml

exception Error of int * nat

let [@entry] main () None = [], Some (Error (Int 1, Nat 2))
                              

  
